Use EdDSA instead of ECDSA for keys