@@ -6,12 +6,12 @@
 
     <groupId>org.example</groupId>
     <artifactId>ExcellenceCoinNode</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
-        <mainClass>mainpackage.util.KeyHelper</mainClass>
+        <mainClass>mainpackage.ExcellenceCoinNode</mainClass>
     </properties>
 
     <dependencies>
@@ -30,6 +30,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.7.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.20.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -71,9 +77,6 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
-                <configuration>
-                    <argLine>--add-opens java.base/java.math=ALL-UNNAMED</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
